--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BeatKlip - Stream. Vibe. Own Your Music.</title>
     <meta name="description" content="BeatKlip - A next-generation music streaming application" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="BeatKlip - Stream. Vibe. Own Your Music." />
-    <meta property="og:description" content="A next-generation, intelligent music streaming application that offers a customizable music experience." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="author" content="SnehaGhosh(@Technical_Isopod_075)" />
+    <meta property="og:image" content="favicon.ico" />
+     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+     <link rel="manifest" href="favicon_io/site.webmanifest">
+    <meta property="og:image" content="/og-image.png" />
   </head>
 
   <body>
